--- a/glasses.html
+++ b/glasses.html
@@ -10,7 +10,7 @@
   <!-- 導覽列 -->
   <nav class="navbar">
     <div class="logo">
-      <img src="2022-web-layout-training-main/week3-4/logo-white.png" alt="眼鏡小logo">
+      <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt="眼鏡小logo">
     </div>
     <ul class="nav-links">
       <li class="nav-links1" ><a href="#">系列鏡框</a></li>
