--- a/glasses.html
+++ b/glasses.html
@@ -22,7 +22,7 @@
 
   <!-- 圖片區塊 -->
   <div class="hero-image">
-      <img class="manIMG1" src="2022-web-layout-training-main/week3-4/home-header.png" alt="">
+      <img class="manIMG1" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-header.png?raw=true" alt="">
       <div class="hero-text-overlay">
         <h1>Promise-Desert 2020 早春系列</h1>
         <p>看得清，才能看得遠</p>
@@ -33,22 +33,22 @@
     <h1>用專業的心，做專業的事</h1>
     <div class="logo2">
       <div class="pink1">
-        <img src="2022-web-layout-training-main/week3-4/home-section2-1.png" alt="錢的小logo">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-1.png?raw=true" alt="錢的小logo">
         <h2>單一價格</h2>
         <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
       </div>
       <div class="pink2">
-        <img src="2022-web-layout-training-main/week3-4/home-section2-2.png" alt="時間小logo">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true" alt="時間小logo">
         <h2>20 分鐘即可取件</h2>
         <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
       </div>
       <div class="pink3">
-        <img src="2022-web-layout-training-main/week3-4/home-section2-3.png" alt="愛心小logo">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true" alt="愛心小logo">
         <h2>安心售後服務</h2>
         <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
       </div>
       <div class="pink4">
-        <img src="2022-web-layout-training-main/week3-4/home-sectioin2-4.png" alt="眼鏡小logo">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-sectioin2-4.png?raw=true" alt="眼鏡小logo">
         <h2>關於鏡片</h2>
         <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
       </div>
@@ -57,28 +57,28 @@
   <h1 class="type">經典系列鏡框</h1>
   <div class="white">
     <div class="model">
-      <img src="2022-web-layout-training-main/week3-4/home-section3-1.png" alt="女模特">
+      <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true" alt="女模特">
       <h2>OPTICAL</h2>
     </div>
     <div class="model">
-      <img src="2022-web-layout-training-main/week3-4/home-section3-2.png" alt="妹子模特">
+      <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true" alt="妹子模特">
       <h2>SUNGLASSES</h2>
     </div>
     <div class="model">
-      <img src="2022-web-layout-training-main/week3-4/home-section3-3.png" alt="阿伯model">
+      <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true" alt="阿伯model">
       <h2>FUNCTIONAL</h2>
     </div>
   </div>
   <div class="design">
-      <img src="2022-web-layout-training-main/week3-4/index-bg.png" class="bigphoto" alt="">
+      <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/index-bg.png?raw=true" class="bigphoto" alt="">
       <div class="title">
         <h2>聯名設計鏡框</h2>
       </div>
       <div class="small1">
-        <img src="2022-web-layout-training-main/week3-4/home-section4-1.png" alt="">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true" alt="">
       </div>
       <div class="small2">
-        <img src="2022-web-layout-training-main/week3-4/home-section4-2.png" alt="">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true" alt="">
       </div>
       <div class="detail1">
         <h2>DOUBLE A+</h2>
@@ -91,25 +91,25 @@
     <div class="recommend"><h1>顧客推薦</h1></div>
     <div class="guestHome">
       <div class="guest1">
-        <img src="2022-web-layout-training-main/week3-4/home-section5-1.png" alt="顧客1">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true" alt="顧客1">
         <h4>Jessy</h4>
         <p>眼鏡品質優良，下次還會想來這邊購<br>買！</p>
         <p class="date">2021/06/20</p>
       </div>
       <div class="guest2">
-        <img src="2022-web-layout-training-main/week3-4/home-section5-2.png" alt="顧客2">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true" alt="顧客2">
         <h4>凱倫</h4>
         <p>做工細緻、鏡架很輕盈，戴久也不會覺<br>得有負擔，推薦給大家！</p>
         <p class="date">2021/04/18</p>
       </div>
       <div class="guest3">
-        <img src="2022-web-layout-training-main/week3-4/home-section5-3.png" alt="顧客3">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true" alt="顧客3">
         <h4>悠悠</h4>
         <p>謝謝客服人員的詳細回答，成功買到了<br>喜歡的眼鏡，下次會再回購！</p>
         <p class="date">2020/12/25</p>
       </div>
       <div class="guest4">
-        <img src="2022-web-layout-training-main/week3-4/home-section5-4.png" alt="顧客4">
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true" alt="顧客4">
         <h4>Kyuan</h4>
         <p>服務很好，品質沒有任何問題，非常喜<br>歡。</p>
         <p class="date">2020/10/31</p>
