--- a/glasses.html
+++ b/glasses.html
@@ -155,9 +155,9 @@
           <li><a href="#"></a>常見問題</li>
         </ul>
         <ul class="footerlogo">
-          <li><a href="#"></a><img src="2022-web-layout-training-main/week3-4/ic-social-fb.png" alt="臉書logo"></li>
-          <li><a href="#"></a><img src="2022-web-layout-training-main/week3-4/ic_social_ig.png" alt="IG的logo"></li>
-          <li><a href="#"></a><img src="2022-web-layout-training-main/week3-4/ic_social_line.png" alt="line的logo"></li>
+          <li><a href="#"></a><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true" alt="臉書logo"></li>
+          <li><a href="#"></a><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true" alt="IG的logo"></li>
+          <li><a href="#"></a><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true" alt="line的logo"></li>
         </ul>
       </nav>
       <div class="phonehome">
